# cheerp-utils

./: CMakeLists.txt  ChangeLog  FEATURES  Makefile  README  README.md  TODO  client.h  dom.h  test.cpp  test.html  test2.cpp  test3.cpp  types.h
.circleci/: config.yml
debian/: changelog  control  copyright  rules
include/: CMakeLists.txt  Makefile  client.h  clientlib.h  server.h  stdserialize.h  types.h  webgl.h
include/client/: README.md  client  client.h  clientlib.h  coroutine.h  function.h  int64utils.h  jsexception.h  jshelper.h  jsobject.h  memory.h  types.h  webgl.h
include/client/new/: cheerp_utility.h  client.h  clientlib.h  coroutine.h  function.h  jsexception.h  jshelper.h  jsobject.h  types.h  webgl.h
include/client/old/: client.h  jsobject.h
include/common/: promise.h
include/duetto/: client.h  clientlib.h  types.h
include/server/: connection.h  server.h
rpmbuild/SPECS/: cheerp-utils.spec
scripts/: CMakeLists.txt  Makefile  cheerp-unknown-none-ar  cheerp-unknown-none-g++  cheerp-unknown-none-gcc  cheerpwrap  cheerpwrap.gen  cheerpwrap.in  wasm32-cheerpos-linux-g++  wasm32-cheerpos-linux-gcc  wasm32-unknown-none-g++  wasm32-unknown-none-gcc  wasm32-unknown-wasi-ar  wasm32-unknown-wasi-g++  wasm32-unknown-wasi-gcc
tests/: .gitignore  Makefile  cheerp_pion_main.cpp  cheerp_server_stub.cpp  deserializer.cpp  duetto.js  duetto_test.html  duetto_test2.html  duetto_test3.html  import-polyfills.js  run_tests.py  server1.cpp  server2.cpp  server3.cpp  server_stub.cpp  testReport.test  tests.make  tictactoe.cpp  tictactoe.html  webworker-polyfill.js
tests/check_dts/: package-lock.json  package.json  tsconfig.json
tests/check_dts/src/: index.ts
tests/dom/: Makefile  dom1.cpp  dom2.cpp  dom3.cpp  test1.html  test2.html  test3.html
tests/emscripten_tests/: Makefile  benchmark.sh  copy.cpp  corrections.cpp  fannkuch.cpp  fasta.cpp  memops.cpp  primes.cpp
tests/frontend/ffi/: func_arg_func.cpp  func_arg_str.cpp  func_arg_variadic.cpp  func_args.cpp
tests/server/: Makefile  async_chat.cpp  async_chat.html  server1.cpp  server2.cpp  server3.cpp  server_test1.html  server_test2.html  server_test3.html  tictactoe.cpp  tictactoe.html
tests/unit/: test1.cpp  test2.cpp  test4.cpp  test5.cpp  tests.h
tests/unit/anyref/: args.cpp
tests/unit/bitfield/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
tests/unit/cli/: argv.cpp  argv.testing.js  compat.cpp  env.cpp  env.testing.js
tests/unit/client/: _delete.cpp  _delete.js.commonjsdriver.js  _delete.mjs.es6driver.mjs  _delete.testing.js  class.cpp  globals.cpp  globals.js.commonjsdriver.js  globals.mjs.es6driver.mjs  globals.testing.js  instanceof.cpp  nested-namespaces.cpp  setter-getter.cpp  static-methods.cpp  typeof.cpp
tests/unit/closures/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
tests/unit/codegen/: 64bitenum.cpp  64bitpointerarith.cpp  64bitrewrite.cpp  abs.cpp  advancedasm.cpp  bswap.cpp  byval.cpp  covariant-pa.cpp  dynalloca.cpp  dynstack.cpp  empty.js.commonjsdriver.js  empty.mjs.es6driver.mjs  empty.testing.js  escapes.cpp  floattoint.cpp  fptoi.cpp  indirectfree.cpp  nested_lambda.cpp  null-variadic.cpp  reverse_iter.cpp  structbase.cpp  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test3.cpp  test4.cpp  (+9 more)
tests/unit/coroutines/: cast-promise.cpp  test1.cpp
tests/unit/dom/: max.cpp  noconstructor.cpp  objapi.cpp  test1.cpp  test2.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  utf8.cpp
tests/unit/downcast/: test1.cpp  test2.cpp
tests/unit/exceptions/: exitexception1.cpp  exitexception2.cpp  exitexception2.testing.js  test1.cpp  test2.cpp
tests/unit/ffi/: i64.cpp  test1.cpp  test2.cpp  test3.cpp
tests/unit/globals/: betterconst.cpp  globaluint16.cpp  initializers.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test6.cpp  test7.cpp
tests/unit/jsexport/: array_of_structs.cpp  array_of_structs.testing.js  cat.cpp  cat.testing.js  cheerp_pimpl.cpp  cheerp_pimpl.h  cheerp_pimpl_mod.cpp  cheerp_pimpl_mod.js.commonjsdriver.js  cheerp_pimpl_mod.mjs.es6driver.mjs  cheerp_pimpl_mod.testing.js  compare_pointers.cpp  compare_pointers.testing.js  empty_class.cpp  empty_class.testing.js  factory.cpp  global_variables.cpp  global_variables.testing.js  inheritance.cpp  inheritance.testing.js  invoke_functions.cpp  member_variables.cpp  member_variables.testing.js  namespaces.cpp  nested_variables.cpp  nested_variables.testing.js  parameters_builtin.cpp  paramethers_builtin.cpp  paramethers_client.cpp  qualifiers.cpp  static_variables.cpp  static_variables.testing.js  unsafe_clang.cpp  unsafe_gnu.c
tests/unit/memory/: arraynew.cpp  kinds.cpp  multiarray.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  typed_memintrinsics.cpp  typedarrays_operator.cpp
tests/unit/randomcfg/: comb10by10.cpp  comb25by25.cpp  combOnDouble.cpp  operationsOnInt64.cpp  size10times10.cpp  size20times10.cpp  size50times2.cpp  size5times20.cpp  swap10by10.cpp  swap25by25.cpp  swap5by5.cpp  swapOnPointers.cpp
tests/unit/server/: server1.cpp
tests/unit/static/: test1.cpp
tests/unit/std/: chrono.cpp  gettimeofday.cpp  locale.cpp  malloc.cpp  mapdestruction.cpp  memcmp.cpp  sort.cpp  sscanf.cpp  stdmemfuncs.cpp  stringassign.cpp  stringhashing.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  tostring.cpp
tests/webgl/: Makefile  test.html  webgl-util.js  webgl.cpp  webgl.h  webgl.html
tools/: CMakeLists.txt  Cheerp.cmake  Cheerp.cmake.in  CheerpCommon.cmake.in  CheerpToolchain.cmake  CheerpToolchain.cmake.in  CheerpToolchainCommon.cmake.in  CheerpWasiToolchain.cmake  CheerpWasm.cmake.in  CheerpWasmToolchain.cmake  CheerpWasmToolchain.cmake.in  Makefile
tools/cmake/: Cheerp.cmake  CheerpToolchain.cmake  Duetto.cmake  DuettoToolchain.cmake
webgles/: Makefile  gl2.h  webgles.cpp  webgles.h  webglesutils.cpp
(+49 files in other folders)
